<resources>
    <string name="app_name" translatable="false">FlowARt: AR Drawing Sketch Art</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-8475252859305547~8930447305</string>
    <string name="fb_app_id" translatable="false">1375404854195357</string>
    <string name="facebook_client_token" translatable="false">d4a3817ae9e3a66720ba1fc369328a58</string>
    <string name="rating_email" translatable="false">jamestsoft@gmail.com</string>

    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="indonesian">Indonesian</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>
    <string name="please_select_language">Please select language first.</string>
    <string name="next">Next</string>
    <string name="no_email_client_installed">No email client installed</string>
    <string name="start">Start</string>
    <string name="please_select_language_first">Please select language first!</string>


    <string name="title_intro_1">Create Animation</string>
    <string name="title_intro_2">Fun To Animate</string>
    <string name="title_intro_3">Line Animation</string>

    <string name="message_intro_1">It has never been easier to become an animator with simple approach</string>
    <string name="message_intro_2">Create animation in your own unique manner with basic drawings</string>
    <string name="message_intro_3">Create animation by drawing a line with your finger.</string>
    <string name="home">Home</string>
    <string name="lesson">Lesson</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flowart_ar_drawing_sketch_art" translatable="false">FlowARt: AR Drawing Sketch Art</string>
    <string name="what_will_you_explore_today">What will you explore today?</string>
    <string name="your_drawing_journey">Your Drawing Journey</string>
    <string name="let_s_tune_tour_app">Let’s Tune Tour App</string>
    <string name="beginner">Beginner</string>
    <string name="learn_the_basics_step_by_step">Learn the basics step-by-step</string>
    <string name="intermediate">Intermediate</string>
    <string name="enhance_your_style_and_techniques">Enhance your style and techniques</string>
    <string name="professional">Professional</string>
    <string name="master_advanced_and_creative_skills">Master advanced and creative skills</string>
    <string name="see_all">See all</string>
    <string name="chibi">Chibi</string>
    <string name="library">Library</string>
    <string name="cartoon">Cartoon</string>
    <string name="trending">Trending</string>
    <string name="recent">Recent</string>
    <string name="anime">Anime</string>
    <string name="animal">Animal</string>
    <string name="flower">Flower</string>
    <string name="sketch">Sketch</string>
    <string name="trace">Trace</string>
    <string name="failed_to_share_image">Failed to share image</string>
    <string name="has_error_now">Has error now!</string>
    <string name="image_save_success">Image saved successfully</string>
    <string name="step_num">Step %1$d/%2$d</string>
    <string name="video_capture_failed">Video capture failed</string>
    <string name="photo_capture_failed">Photo capture failed</string>
    <string name="saved_to_gallery">Saved to Gallery</string>
    <string name="lesson_num">%1$s/%2$s</string>
    <string name="for_the_best_experience_ar_drawing_needs_access_to_the_following_permissions">For the best experience, %1$s needs access to the following permissions</string>
    <string name="please_grant_permission_to_use_this_feature">Please grant permission to use this feature!</string>
    <string name="no_image_selected">No image selected</string>
    <string name="unable_to_create_image_file">Unable to create image file</string>
    <string name="create_your_art_easily">Create Your Art Easily</string>
    <string name="draw_easily_with_ar_that_guides_each_stroke_smoothly_and_helps_you_create_artwork_faster">Draw easily with AR that guides each stroke smoothly and helps you create artwork faster.</string>
    <string name="endless_ar_templates">Endless AR Templates</string>
    <string name="explore_countless_ar_templates_that_make_practicing_your_drawing_feel_natural_and_fun">Explore countless AR templates that make practicing your drawing feel natural and fun.</string>
    <string name="your_collection">Your Collection</string>
    <string name="save_and_share_all_your_favorite_sketches_effortlessly_with_just_a_few_simple_taps">Save and share all your favorite sketches effortlessly with just a few simple taps.</string>
    <string name="failed_to_share">Failed to Share</string>
    <string name="select_language">Select Language</string>
    <string name="gallery">Gallery</string>
    <string name="setting">Setting</string>
    <string name="permission">Permission</string>
    <string name="camera">Camera</string>
    <string name="microphone">Microphone</string>
    <string name="granted_later">Granted Later</string>
    <string name="continue_2">Continue</string>
    <string name="preview">Preview</string>
    <string name="result">Result</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="done">Done</string>
    <string name="opacity">Opacity</string>
    <string name="lock">Lock</string>
    <string name="flash">Flash</string>
    <string name="original">Original</string>
    <string name="stroke">Stroke</string>
    <string name="original_to_sketch">Original to Sketch</string>
    <string name="gray_to_sketch">Gray to Sketch</string>
    <string name="gray_to_soft_sketch">Gray to Soft Sketch</string>
    <string name="flowart_ar_drawing" translatable="false">FlowARt: AR Drawing</string>
    <string name="sketch_art" translatable="false">Sketch Art</string>
    <string name="this_action_can_contain_ad">This action can contain ad</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="color">Color</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="draw_guide">Draw Guide</string>
    <string name="use_tripod_a_glass_or_a_stack_of_book_to_hold_your_phone_in_place_while_you_draw">Use tripod, a glass, or a stack of book to hold your phone in place while you draw.</string>
    <string name="ok_i_understand">OK, I understand</string>
    <string name="exit_now">Exit Now?</string>
    <string name="are_you_sure_you_want_to_exit_all_your_progress_will_be_lost">Are you sure you want to exit? All your progress will be lost.</string>
    <string name="exit">Exit</string>
    <string name="your_draw">Your Draw</string>
    <string name="total_time">Total Time</string>
    <string name="my_favorite">My favorite</string>
    <string name="your_gallery_is_empty">Your gallery is empty</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="drawing_difficult">Drawing Difficult:</string>
    <string name="step">Step</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="ar_drawing" translatable="false">AR Drawing</string>
    <string name="please_grant_these_permissions_to_use_this_feature">Please grant these permissions to use this feature</string>
    <string name="please_enable_permission_in_settings">Please enable permission in Settings</string>
    <string name="undo_limit_reached_max_50_steps_older_steps_will_be_removed">Undo limit reached (Max 50 steps)</string>
    <string name="there_are_no_more_strokes_to_undo">There are no more strokes to undo</string>
    <string name="there_are_no_more_strokes_to_redo">There are no more strokes to redo</string>
    <string name="no_data_for_this_lesson">No data for this lesson</string>


</resources>