<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/dialog_bg"
    tools:context=".fragments.ExitDialog">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/mHeading.H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_now"
        android:textColor="@color/mainTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMessage"
        style="@style/mTxt.P2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="40dp"
        android:text="@string/are_you_sure_you_want_to_exit_all_your_progress_will_be_lost"
        android:textColor="#85655B"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <TextView
        android:id="@+id/btnCancel"
        style="@style/mTxt.P1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_cancel_button"
        android:gravity="center"
        android:minHeight="44dp"
        android:paddingTop="8dp"
        android:paddingBottom="11dp"
        android:text="@string/cancel"
        android:textColor="@color/mainTextColor"
        app:layout_constraintEnd_toStartOf="@id/btnExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMessage" />

    <TextView
        android:id="@+id/btnExit"
        style="@style/mTxt.P1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/done_bg"
        android:gravity="center"
        android:minHeight="44dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="11dp"
        android:text="@string/exit"
        android:textColor="@color/mainTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/txtMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>