<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/dialog_bg"
    tools:context=".fragments.DrawGuideDialog">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/mHeading.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/draw_guide"
        android:textColor="@color/mainTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gifGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:shapeAppearanceOverlay="@style/ItemImage" />

    <TextView
        android:id="@+id/txtMessage"
        android:textSize="14sp"
        android:fontFamily="@font/fredoka_medium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/use_tripod_a_glass_or_a_stack_of_book_to_hold_your_phone_in_place_while_you_draw"
        android:textColor="#85655B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gifGuide" />

    <TextView
        android:id="@+id/btnOk"
        style="@style/mTxt.P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/done_bg"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="11dp"
        android:includeFontPadding="true"
        android:text="@string/ok_i_understand"
        android:textColor="@color/mainTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>