<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".fragments.SettingFragment">

    <!--    <FrameLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/frNative"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        android:layout_marginBottom="6dp"-->
    <!--        android:layout_marginHorizontal="20dp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/setting_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <TextView
                style="@style/mTxt.P1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_setting_language"
                android:drawablePadding="12dp"
                android:text="@string/language"
                android:textColor="@color/mainTextColor" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_language"
                style="@style/mMeta.m1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_right_btn"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/english"
                android:textColor="#DC893A" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:visibility="gone"
            android:layout_marginHorizontal="2dp"
            tools:visibility="visible"
            android:id="@+id/vShowInterAds" />

        <LinearLayout
            android:id="@+id/layout_rate_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <TextView
                style="@style/mTxt.P1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_rate_us"
                android:drawablePadding="12dp"
                android:text="@string/rate_us"
                android:textColor="@color/mainTextColor" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                style="@style/mMeta.m1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_right_btn"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text=""
                android:textColor="#DC893A" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <TextView
                style="@style/mTxt.P1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_privacy"
                android:drawablePadding="12dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/mainTextColor" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                style="@style/mMeta.m1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_right_btn"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text=""
                android:textColor="#DC893A" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <TextView
                style="@style/mTxt.P1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_share"
                android:drawablePadding="12dp"
                android:text="@string/share"
                android:textColor="@color/mainTextColor" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                style="@style/mMeta.m1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_right_btn"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text=""
                android:textColor="#DC893A" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/image_setting"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="-28dp"
        android:src="@drawable/img_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>